--- a/META.yml
+++ b/META.yml
@@ -1,12 +1,14 @@
-# http://module-build.sourceforge.net/META-spec.html
-#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
-name:         Slay-Maker
-version:      0.07
-version_from: lib/Slay/Maker.pm
-installdirs:  site
-requires:
+--- #YAML:1.0
+name:                Slay-Maker
+version:             0.08
+abstract:            ~
+license:             ~
+author:              ~
+generated_by:        ExtUtils::MakeMaker version 6.44
+distribution_type:   module
+requires:     
     Class::Std:                    0
     IPC::Run:                      0
-
-distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.30
+meta-spec:
+    url:     http://module-build.sourceforge.net/META-spec-v1.3.html
+    version: 1.3
